--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -7,7 +7,7 @@ html {
  scroll-behavior: smooth;
  word-break: break-all;
  font-size: 10px;
- @media(mix-width:768px) and (max-width: 940) {
+ @media(min-width:768px) and (max-width: 940px) {
    font-size: vw(10,940);
  }
  @include sp {
@@ -16,6 +16,34 @@ html {
 }
 
 body {
- font-family: 	"Yu Gothic","游ゴシック",
-"	YuGothic","游ゴシック体","Noto Sans JP" ,sans-serif;
+ font-family: 	"Yu Gothic","游ゴシック","YuGothic","游ゴシック体","Noto Sans JP",sans-serif;
+ font-size: 1.8rem;
+ line-height: calc(33 / 18);
+ font-weight: 700;
+ letter-spacing: 0;
+ padding-top: 8rem;
+ @include sp {
+   padding-top: 5rem;
+ }
+}
+
+a {
+ cursor: pointer;
+}
+
+img {
+ width: 100%;
+ height: auto;
+ display: block;
+}
+
+@media(min-width: 768px) {
+ .sp {
+  display: none!important;
+ }
+}
+@media(max-width: 767px) {
+ .pc {
+  display: none!important;
+ }
 }
