--- a/scss/object/project/_p-top.scss
+++ b/scss/object/project/_p-top.scss
@@ -1,2 +1,216 @@
 @use '../../foundation/mixin' as *;
 @use '../../foundation/variable' as *;
+
+.p-top__fv {
+ width: 100%;
+ position: relative;
+}
+
+.p-top-fv__img {
+ width: 100%;
+ position: relative;
+}
+
+.p-top-fv__img::before {
+ content: '';
+ background-color: rgba(80, 80, 80, 0.502);
+ width: 100%;
+ height: 100%;
+ position: absolute;
+ top: 0;
+}
+
+.p-top-fv__text {
+ width: 100%;
+ text-align: center;
+ color: #fff;
+ font-size: 4rem;
+ line-height: calc(60 / 40);
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+ @include sp {
+   font-size: 3rem;
+   line-height: calc(50 / 30);
+ }
+}
+
+
+//-----------p-top__concept-----------
+
+.p-top__concept {
+ padding-block: 6.6rem 5.5rem;
+ @include sp {
+   padding-block: 4.6rem 3.4rem;
+ }
+}
+
+.p-top-concept__head {
+ width: 100%;
+ text-align: center;
+ color: $color-red;
+ font-size: 3.5rem; 
+ line-height: calc(50 / 35); 
+ @include sp {
+  font-size: 2.5rem;
+  line-height: calc(40 / 25);  
+ }
+}
+
+.p-top-concept__text {
+ width: 100%;
+ text-align: center;
+ font-size: 1.8rem;
+ line-height: calc(30 / 18);
+ font-weight: 500;
+ padding-block: 1.7rem 3.4rem;
+ @include sp {
+  padding-block: 0.7rem 2rem;
+ }
+}
+
+.p-top-concept__img {
+ width: 100%;
+ text-align: center;
+}
+
+.p-top-concept__diagram {
+ padding-top: 1.8rem;
+ display: flex;
+ flex-direction: column;
+ row-gap: 2rem;
+ @include sp {
+  padding-top: 3.3rem;
+  row-gap: 1.7rem;
+ }
+}
+
+
+.p-top-concept-diagram__row {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+.p-top-concept-diagram-row__pri {
+ background-color: aqua;
+ width: 40%;
+ text-align: right;
+ color: $color-red;
+ font-size: 2.5rem;
+ line-height: calc(50 / 25);
+ text-transform: capitalize;
+ @include sp {
+   font-size: 2rem;
+   line-height: calc(50 / 20);
+ }
+}
+
+.p-top-concept-diagram-row__cir {
+ background-color: $color-red;
+ width: 2rem;
+ height: 2rem;
+ border-radius: 1rem;
+ margin-inline: 3rem;
+ position: relative;
+}
+
+.p-top-concept-diagram-row__cir::before {
+ content: '';
+ background-color: $color-red;
+ width: 0.3rem;
+ height: 7rem;
+ position: absolute;
+ left: 50%;
+ bottom: 50%;
+ transform: translateX(-50%);
+}
+
+.p-top-concept-diagram-row__cir--top::before {
+ content: '';
+ background-color: $color-red;
+ width: 0.3rem;
+ height: 5rem;
+ position: absolute;
+ left: 50%;
+ bottom: 50%;
+ transform: translateX(-50%);
+}
+
+.p-top-concept-diagram-row__cir--top::after { 
+ content: '';
+ width: 2.5rem;
+ height: 2.5rem;
+ border: 0.3rem solid $color-red;
+ border-color: transparent transparent $color-red $color-red;
+ position: absolute;
+ bottom: 3.4rem;
+ left: -0.2rem;
+ transform: rotate(135deg);
+}
+
+
+
+.p-top-concept-diagram-row__sec {
+ background-color: aqua;
+ width: 40%;
+ font-size: 2.3rem;
+ line-height: calc(50 / 23);
+ font-weight: 500;
+ @include sp {
+  font-size: 2rem;
+  line-height: calc(50 / 20);
+ }
+}
+
+
+
+
+
+
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
+
+
+//-----------p-top__------------
