--- a/css/style.css
+++ b/css/style.css
@@ -523,4 +523,228 @@ img {
     font-size: 2rem;
     line-height: 2.5;
   }
+}
+
+.p-top__message {
+  padding-block: 6.8rem 5.9rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__message {
+    padding-block: 4.9rem 4rem;
+  }
+}
+
+.c-head {
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  line-height: 1.6666666667;
+}
+@media only screen and (max-width: 767px) {
+  .c-head {
+    font-size: 2.5rem;
+    line-height: 1.6;
+  }
+}
+
+.c-head--wh {
+  color: #fff;
+}
+
+.p-top-message__text {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 1.8rem;
+  line-height: 1.6666666667;
+  font-weight: 500;
+  padding-top: 3rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-message__text {
+    padding-top: 1.4rem;
+  }
+}
+
+.p-top__reason {
+  padding-block: 6.4rem 7rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__reason {
+    padding-block: 5.1rem 3.9rem;
+  }
+}
+
+.p-top-reason__block-wrap {
+  padding-top: 2.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason__block-wrap {
+    padding-top: 3.6rem;
+    row-gap: 3.7rem;
+  }
+}
+
+.p-top-reason__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason__block {
+    display: initial;
+  }
+}
+
+.p-top-reason-block__img {
+  width: 35rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block__img {
+    width: 100%;
+  }
+}
+
+.p-top-reason-block-right__head {
+  padding: 0.7rem 0 1.2rem 5rem;
+  border-bottom: 0.2rem solid #bc0000;
+  font-size: 2.2rem;
+  line-height: 1.5;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block-right__head {
+    padding: 3rem 0 1rem 0rem;
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+}
+
+.p-top-reason-block-right__text {
+  padding: 3.7rem 0 0 5rem;
+  font-size: 1.8rem;
+  line-height: 1.8333333333;
+  font-weight: 500;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-reason-block-right__text {
+    padding: 1.7rem 0 0 0rem;
+    font-size: 1.6rem;
+    line-height: 1.875;
+  }
+}
+
+.p-top__voice {
+  padding-block: 6rem 6.3rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__voice {
+    padding-block: 4.6rem 5rem;
+  }
+}
+
+.p-top-voice__inner {
+  max-width: 108rem;
+  width: 100%;
+  padding-inline: 8.25rem;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__inner {
+    padding-inline: 2rem;
+  }
+}
+
+.p-top-voice__lists {
+  padding-top: 3.6rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__lists {
+    padding-top: 3.9rem;
+  }
+}
+
+.slick-arrow {
+  position: absolute;
+  top: 16.4rem;
+  z-index: 5;
+}
+@media only screen and (max-width: 767px) {
+  .slick-arrow {
+    top: 16.7rem;
+  }
+}
+
+.slick-prev {
+  position: absolute;
+  left: -2.5rem;
+  z-index: 5;
+}
+@media only screen and (max-width: 767px) {
+  .slick-prev {
+    left: 0;
+  }
+}
+
+.slick-next {
+  position: absolute;
+  right: -2.5rem;
+  z-index: 5;
+}
+@media only screen and (max-width: 767px) {
+  .slick-next {
+    right: 0;
+  }
+}
+
+.p-top-voice__list {
+  margin-inline: 1.75rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__list {
+    margin-inline: 0;
+  }
+}
+
+.p-top-voice__head {
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-size: min(2.037037037vw, 22px);
+  line-height: 1.5;
+  padding-block: 1.8rem 1rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__head {
+    font-size: 2.2rem;
+    padding-block: 2.7rem 1rem;
+  }
+}
+
+.p-top-voice__text {
+  color: #fff;
+  font-weight: 500;
+  font-size: min(1.6666666667vw, 18px);
+  line-height: 1.6666666667;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-voice__text {
+    font-size: 1.8rem;
+  }
+}
+
+.u-bg-red {
+  background-color: #bc0000;
 }/*# sourceMappingURL=style.css.map */
