--- a/css/style.css
+++ b/css/style.css
@@ -745,6 +745,272 @@ img {
   }
 }
 
+.p-top__flow {
+  padding-block: 5rem 0;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__flow {
+    padding-block: 4.6rem 0;
+  }
+}
+
+.p-top-flow__diagram {
+  padding-top: 5.3rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow__diagram {
+    padding-top: 3.6rem;
+  }
+}
+
+.p-top-flow-diagram__row {
+  margin-bottom: 5.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram__row {
+    margin-bottom: 3.6rem;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.p-top-flow-diagram-row__marker {
+  background-color: #bc0000;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1rem;
+  margin-inline: 5rem;
+  position: relative;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram-row__marker {
+    margin-inline: 0.7rem 2rem;
+  }
+}
+
+.p-top-flow-diagram-row__marker::before {
+  content: "";
+  background-color: #bc0000;
+  width: 0.3rem;
+  height: 12rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram-row__marker::before {
+    height: 19rem;
+  }
+}
+
+.p-top-flow-diagram-row__marker--bottom::before {
+  content: "";
+  background-color: #bc0000;
+  width: 0.3rem;
+  height: 4.5rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram-row__marker--bottom::before {
+    height: 13.5rem;
+  }
+}
+
+.p-top-flow-diagram-row__marker--bottom::after {
+  content: "";
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 0.3rem solid #bc0000;
+  border-color: transparent transparent #bc0000 #bc0000;
+  position: absolute;
+  left: -0.25rem;
+  top: 2.8rem;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram-row__marker--bottom::after {
+    top: 11.8rem;
+  }
+}
+
+.p-top-flow-diagram-row__head {
+  font-size: 2.2rem;
+  line-height: 1.5;
+  color: #bc0000;
+  width: 19.3rem;
+}
+
+.p-top-flow-diagram-row__text {
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 1.6666666667;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-flow-diagram-row__text {
+    font-size: 1.6rem;
+    line-height: 1.875;
+    padding-top: 0.9rem;
+    margin-left: 4.7rem;
+  }
+}
+
+.p-top__faq {
+  padding-block: 5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top__faq {
+    padding-block: 1.9rem;
+  }
+}
+
+.p-top-faq__lists {
+  padding-top: 3.6rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq__lists {
+    padding-top: 3.9rem;
+  }
+}
+
+.p-top-faq__item {
+  border-bottom: 0.05rem solid #000;
+}
+
+.p-top-faq__item--top {
+  border-top: 0.05rem solid #000;
+}
+
+.p-top-faq-question {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-block: 1.5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-question {
+    padding-block: 1.3rem 1.3rem;
+  }
+}
+
+.p-top-faq__answer {
+  background-color: rgba(203, 0, 0, 0.098);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-block: 1.5rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq__answer {
+    padding-block: 1.3rem 1.3rem;
+  }
+}
+
+.p-top-faq-question__cir {
+  padding-top: 0.2rem;
+  background-color: #000;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 2rem;
+  line-height: 1.5;
+  text-align: center;
+  margin-inline: 2rem 1rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-question__cir {
+    margin-inline: 0rem 2rem;
+  }
+}
+
+.p-top-faq-answer__cir {
+  padding-top: 0.2rem;
+  background-color: #bc0000;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 2rem;
+  line-height: 1.5;
+  text-align: center;
+  margin-inline: 2rem 1rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-answer__cir {
+    margin-inline: 0rem 2rem;
+  }
+}
+
+.p-top-faq-question__te {
+  font-weight: 500;
+  font-size: 1.7rem;
+  line-height: 1.7647058824;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-question__te {
+    margin-right: 1.5rem;
+  }
+}
+
+.p-top-faq-answer__te {
+  font-weight: 500;
+  font-size: 1.7rem;
+  line-height: 1.7647058824;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-answer__te {
+    margin-right: 4.7rem;
+    font-size: 1.6rem;
+    line-height: 1.875;
+  }
+}
+
+.p-top-faq-question__img {
+  width: 1.3rem;
+  margin-right: 2.8rem;
+}
+@media only screen and (max-width: 767px) {
+  .p-top-faq-question__img {
+    margin-right: 1.4rem;
+  }
+}
+
 .u-bg-red {
   background-color: #bc0000;
+}
+
+.u-transform-180 {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }/*# sourceMappingURL=style.css.map */
